@@ -4,44 +4,82 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>sense.concordia.java.deepclone</groupId>
-		<artifactId>parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
-	<artifactId>sense.concordia.java.deepclone.tests</artifactId>
-	<packaging>jar</packaging>
 
-	<properties>
-        <!-- https://maven.apache.org/general.html#encoding-warning -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.12</maven.compiler.source>
-        <maven.compiler.target>1.12</maven.compiler.target>
-    </properties>
+<parent>
+    <artifactId>parent</artifactId>
+    <groupId>sense.concordia.java.deepclone</groupId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
+  <groupId>sense.concordia.java.deepclone.tests</groupId>
+  <artifactId>sense.concordia.java.deepclone.tests</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>eclipse-test-plugin</packaging>
+  <properties>
+    <testSuite>${project.artifactId}</testSuite>
+    <testClass>sense.concordia.java.deepclone.tests.CloneDetectionTest</testClass>
+  </properties>
 
-    <dependencies>
-
-        <!-- junit 5, unit test -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.1</version>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
-    <build>
-        <finalName>maven-unit-test</finalName>
-        <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-            </plugin>
-
-        </plugins>
-    </build>
+  	<profiles>
+		<profile>
+			<id>macosx</id>
+			<activation>
+				<os>
+					<name>mac os x</name>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<ui.test.vmargs>${tycho.testArgLine} -XstartOnFirstThread -ea
+					-Dosgi.requiredJavaVersion=1.8 -XX:MaxPermSize=256m -Xms1024m
+					-Xmx8192m</ui.test.vmargs>
+				<argLine>${ui.test.vmargs}</argLine>
+			</properties>
+		</profile>
+		<profile>
+			<id>other-os</id>
+			<activation>
+				<os>
+					<name>not-mac</name>
+					<family>!mac</family>
+				</os>
+			</activation>
+			<properties>
+				<ui.test.vmargs>${tycho.testArgLine} -ea
+					-Dosgi.requiredJavaVersion=1.8 -XX:MaxPermSize=256m -Xms1024m
+					-Xmx8192m</ui.test.vmargs>
+				<argLine>${ui.test.vmargs}</argLine>
+			</properties>
+		</profile>
+	</profiles>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-surefire-plugin</artifactId>
+        <version>2.4.0</version>
+        <configuration>
+          <useUIHarness>true</useUIHarness>
+          <useUIThread>true</useUIThread>
+          <explodedBundles>
+            <bundle>org.junit</bundle>
+          </explodedBundles>
+          <dependencies>
+            <dependency>
+              <type>eclipse-plugin</type>
+              <artifactId>org.eclipse.equinox.event</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+            <dependency> <!-- For PullUpTests18 -->
+              <type>eclipse-plugin</type>
+              <artifactId>org.eclipse.jdt.annotation</artifactId>
+              <version>[2.0.0,3.0.0)</version>
+            </dependency>
+          </dependencies>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
